# trenchkit

./: LICENSE  README.md  pyproject.toml
trenchkit/: checks.py  trenchkit.py
trenchkit/tools/clang-format/: README.md  main.py  settings.conf
trenchkit/tools/cmake-format/: main.py
